<resources>
    <string name="app_name" translatable="false">ToDo</string>
    <string name="night_mode_prefs_key" translatable="false">nightModePrefsKey</string>
    <string name="version_name_prefs_key" translatable="false">version name prefs key</string>
    <string name="sort">Sort</string>
    <string name="all_tasks">All Tasks</string>
    <string name="done_tasks">Done Tasks</string>
    <string name="edit_task">Edit Task</string>
    <string name="add_edit_task">Add Task</string>
    <string name="undo">Undo</string>
    <string name="undo_action">Undo Remove?</string>
    <string name="share_task">Share Task</string>
    <string name="delete_selected_tasks">Delete Selected Tasks</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="is_done">Is Done?</string>
    <string name="copy_task">Copy Task</string>
    <string name="settings">Settings</string>
    <string name="night_mode">Night Mode</string>
    <string name="trash">Trash</string>
    <string name="version">App Version: %s</string>
    <string name="header" translatable="false">header</string>
    <string name="search">Search</string>
    <string name="undoRemove">Remove</string>
    <string name="delete">Delete</string>
    <string name="tasks_will_be_deleted_after_3_days">Tasks will be deleted after 3 days!</string>
    <string name="no_task">No Task!</string>
    <string name="create_new_task_to_show_here">Create New Task to Show Here!</string>
    <string name="nothing_in_trash">Nothing in Trash!</string>
    <string name="items_will_be_deleted_after_3_days">Items Will be Deleted After 3 Days!</string>
    <string name="no_completed_task">No Completed Task!</string>
    <string name="complete_task_to_show_here">Complete Task to Show Here!</string>
    <string name="hide_message" translatable="false">hide message</string>
    <string name="done_task_empty_state" translatable="false">done task empty state</string>
    <string name="task_empty_state" translatable="false">task empty state</string>
    <string name="trash_empty_state" translatable="false">trash empty state</string>
    <string name="set_complete" translatable="false">Set Complete</string>
</resources>
