<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="task"
            type="com.example.todoapp.data.Task" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:importantForAutofill="noExcludeDescendants"
        tools:context=".ui.details.AddEditTaskFragment">

        <EditText
            android:id="@+id/edtTitleAddTask"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/font"
            android:hint="@string/title"
            android:inputType="text"
            android:padding="8dp"
            android:text="@{task.title}"
            android:textColor="@color/primaryTextColor"
            android:textSize="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edtDescAddTask"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:ems="10"
            android:gravity="top|start"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:text="@{task.description}"
            android:textColor="@color/secondaryTextColor"
            android:textSize="12dp"
            app:layout_constraintBottom_toTopOf="@+id/chbIsDone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edtTitleAddTask" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/chbIsDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:checked="@{task.done}"
            android:text="@string/is_done"
            app:buttonTint="@color/secondaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>